--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,14 @@ flutter:
     - asset/image/introduction_2.png
     - asset/image/introduction_3.png
     - asset/image/logo_google.png
+    - asset/image/bank_of_america.png
+    - asset/image/bca_bank.png
+    - asset/image/chase_bank.png
+    - asset/image/city_bank.png
+    - asset/image/jago_bank.png
+    - asset/image/mandiri_bank.png
+    - asset/image/paypal_bank.png
+    - asset/image/success.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
