--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  image_picker: ^0.8.5+3
+  sliver_tools: ^0.2.7
+  collection: ^1.16.0
+  fl_chart: ^0.55.0
 
 dev_dependencies:
   flutter_test:
