--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   fl_chart: ^0.55.0
   dotted_border: ^2.0.0+2
   file_picker: ^5.0.1
+  flutter_slidable: ^1.0.0
 
 dev_dependencies:
   flutter_test:
