profile page + wallet

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,7 @@ flutter:
     - asset/image/income.png
     - asset/image/expense.png
     - asset/image/attachment.png
+    - asset/image/background_wallet_page.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
