--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   file_picker: ^5.0.1
   flutter_slidable: ^1.0.0
   shared_preferences: ^2.0.15
+  local_auth: ^2.1.2
 
 dev_dependencies:
   flutter_test:
