--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   local_auth: ^2.1.2
   flutter_colorpicker: ^1.0.3
   scrollable_positioned_list: ^0.3.2
+  flutter_date_pickers: ^0.4.0
+  flutter_local_notifications: ^9.9.1
+
+  flutter_isolate: ^2.0.2
 
   #Firebase services
   firebase_core: ^1.21.1
