--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,8 @@ dependencies:
   flutter_date_pickers: ^0.4.0
   
   flutter_local_notifications: ^9.9.1
-  flutter_isolate: ^2.0.2
+  
+  restart_app: ^1.1.0+1
 
   #Firebase services
   firebase_core: ^1.21.1
